[package]
name = "cronus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.12.0"
tokio = { version = "1.34.0", features = ["rt"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros"] }