[package]
name = "cronus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", default-features = false }
cron = "0.12.0"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["rt", "time", "rt-multi-thread", "macros"] }
uuid = { version = "1.5.0", features = ["v4"] }
